--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- font import -->
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Open+Sans&display=swap" rel="stylesheet"> 
-    <title>React App</title>
+    <title>Empowered Conversation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
