--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- font import -->
-    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Open+Sans&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Boogaloo|DM+Serif+Display|DM+Serif+Text|Francois+One|Fredoka+One|Open+Sans|Patua+One|Righteous|Viga&display=swap" rel="stylesheet">
+
     <title>Empowered Conversation</title>
   </head>
   <body>
